--- a/templates/pais/index.html.twig
+++ b/templates/pais/index.html.twig
@@ -3,7 +3,7 @@
 
 {% block body %}
 
-<h1>Listado de paises</h1>
+<h1>Listado de países</h1>
 <ul>
     {% for pais in paises %}
         <li>{{ pais.nombre }} - {{ pais.continente }}</li>
