--- a/templates/provincia/index.html.twig
+++ b/templates/provincia/index.html.twig
@@ -6,7 +6,7 @@
 <h1>Listado de provincias(index provincia)</h1>
 <ul>
     {% for provincia in provincias %}
-        <li>{{ provincia.nombre }} </li>
+        <li>{{ provincia.nombre }} - {{provincia.localidades}}</li>
     {% endfor %}
 </ul>
 
