--- a/templates/localidad/index.html.twig
+++ b/templates/localidad/index.html.twig
@@ -6,7 +6,7 @@
 <h1>Listado de localidades</h1>
 <ul>
     {% for localidad in localidades %}
-        <li>{{ localidad.nombre }} - {{ localidad.area }} - {{localidad.habitantes}} - {{localidad.cp}} -</li>
+        <li>{{ localidad.nombre }} - {{ localidad.area }} - {{localidad.habitantes}} - {{localidad.cp}} - {{localidad.provincia<}}/li>
     {% endfor %}
 </ul>
 
