--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,1 +1,25 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
+
+
+
+h1 {
+
+	color: black;
+	font-family: Arial;
+	text-align: center;
+	text-decoration: 
+	font-size: 40px;
+}
+
+body{
+	background-color: yellow;
+	font-size: 20px;
+	color: blue;
+
+}
+
+footer {
+
+	background-color: green;
+	color:white;
+}
