--- a/templates/region/detalle.html.twig
+++ b/templates/region/detalle.html.twig
@@ -2,20 +2,25 @@
 
 {% block body %}
 
-<h1>Detalle de provincias</h1>
+<h1> Listado de Regiones </h1>
 
-<li>{{ provincia.nombre }} </li>
+	<li> 	
+		{{ region.nombre }} - 
+		{{ region.idioma }}
+	</li>
 
-<ul>
 
-    {% for provincia in provincia.region %}
+	<ul>
+		{% for provincia in region.provincias %}
+		<li> 
+			{{ provincia.nombre }} 
+		</li>
 
-        <li>{{ provincia.nombre }} - {{ provincia.idioma }} - {{ provincia.localidad }} - {{provincia.provincias}}</li>
+		{% endfor %}
+	</ul>
 
-    {% endfor %}
+<a href="{{ path('region_detalle',{'id': 1}) }}"> Añadir País </a>
 
-</ul>
-
-<a href="{{ path('provincia_detalle') }}">Añadir provincia</a>
+{{ dump(region) }}
 
 {% endblock %}
